# re-bind

./: Anchor.toml  package.json
app/: package.json
app/.next/server/: server-reference-manifest.json
apps/contract/: Anchor.toml
apps/contract/programs/contract/: Cargo.toml
apps/contract/programs/contract/src/: lib.rs
apps/contract/programs/contract/src/instructions/: book_property.rs  create_property.rs  finalize_booking.rs  mod.rs  update_property.rs
apps/contract/programs/contract/src/state/: booking.rs  property.rs
apps/web/: package.json
apps/web/app/: contract.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/anchor/: Contract.ts  Contract.tsx  swe_project_1.json  swe_project_1.ts  temp.tsx
apps/web/src/components/Navbar/: Navbar.tsx
apps/web/src/components/Property/: BuyProperty.tsx  CreateProperty.tsx
apps/web/src/components/Sidebar/: Sidebar.tsx
apps/web/src/components/admin/: AdminPanel.tsx
apps/web/src/components/app/: HomeRightMainRenderer.tsx
apps/web/src/components/dashboard/: Dashboard.tsx
apps/web/src/components/utility/: ConnectedWalletInfoCard.tsx  (+2 more)
apps/web/src/types/: PropertyType.ts
apps/web/src/ui/: PuzzleSVG.tsx
programs/swe-project-1/: Cargo.toml
programs/swe-project-1/src/: lib.rs
programs/swe-project-1/src/error/: error.rs
programs/swe-project-1/src/instructions/: book_property.rs  change_authority.rs  create_property.rs  finalize_booking.rs  initialize_platform.rs  mod.rs  update_property.rs
programs/swe-project-1/src/state/: mod.rs  platform_config.rs
tests/: swe-project-1.ts
(+3 files in other folders)
